# spriteforge

./: .dockerignore  .env.example  .gitignore  .replit  ARCHITECTURE.md  DEVELOPMENT_COMPLETE.md  Dockerfile  README.md  STATUS.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: build-and-test.yml  deploy-flyio.yml  publish-docker.yml
app/: __init__.py  config.py  database.py  main.py  storage.py
app/components/: __init__.py  animation_preview.py
app/models/: __init__.py  asset.py  atlas.py  cost.py  generation.py
app/pages/: 00_Create.py  00_Manifest.py  01_Generate.py  01_Review_Assets.py  02_Review.py  03_Gallery.py  04_Export.py  05_Settings.py
app/services/: __init__.py  atlas_packer.py  generation.py  post_process.py
config/: sample_manifest.json
docs/: GETTING_STARTED.md
scripts/: health_check.py  init_db.py
tests/: __init__.py  conftest.py  test_models.py  test_services.py  test_storage.py
